watched folder sabnzbd

--- a/templates/sabnzbd.ini.j2
+++ b/templates/sabnzbd.ini.j2
@@ -32,7 +32,7 @@ no_penalties = 0
 load_balancing = 2
 rating_filter_abort_video = 0
 osx_speed = 1
-dirscan_dir = ""
+dirscan_dir = {{ htpc_downloads_watched }}
 disable_api_key = 0
 quota_period = m
 email_to = ,
