add host_whitelist to configurable options

--- a/templates/sabnzbd.ini.j2
+++ b/templates/sabnzbd.ini.j2
@@ -180,6 +180,7 @@ overwrite_files = 0
 queue_complete_pers = 0
 enable_tv_sorting = 0
 folder_max_length = 256
+host_whitelist = {{ inventory_hostname }}, {{ inventory_hostname_short }}, {{ ansible_hostname }}, {{ sabnzbd_host_whitelist }}
 [logging]
 log_new = 0
 max_log_size = 5242880
