make role independent

--- a/templates/sabnzbd.ini.j2
+++ b/templates/sabnzbd.ini.j2
@@ -32,7 +32,7 @@ no_penalties = 0
 load_balancing = 2
 rating_filter_abort_video = 0
 osx_speed = 1
-dirscan_dir = {{ htpc_downloads_watched }}
+dirscan_dir = {{ sabnzbd_downloads_watched }}
 disable_api_key = 0
 quota_period = m
 email_to = ,
@@ -117,7 +117,7 @@ safe_postproc = 0
 language = en
 new_nzb_on_failure = 0
 nzb_key = 95ec92e8bd39e842d4ba1bb4011deb9e
-complete_dir = {{ htpc_downloads_complete }}
+complete_dir = {{ sabnzbd_downloads_complete }}
 rating_filter_pause_downvoted = 0
 replace_illegal = 1
 rating_filter_abort_audio = 0
